Don't visit decorators and base classes twice

This led to crashes because the second turn was done within
the class context.
BUG:319045